tests/baselines/reference/parserArrowFunctionExpression4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression4.ts (2 errors) ====
    a = (() => { }, a)
    ~
!!! error TS2304: Cannot find name 'a'.
                    ~
!!! error TS2304: Cannot find name 'a'.